@@ -5,8 +5,11 @@ require 'database_cleaner/active_record/truncation'
 
 module ActiveRecord
   module ConnectionAdapters
-    [MysqlAdapter, Mysql2Adapter, SQLite3Adapter, JdbcAdapter, PostgreSQLAdapter].each do |adapter|
+    [MysqlAdapter, Mysql2Adapter, SQLite3Adapter, JdbcAdapter, PostgreSQLAdapter, IBM_DBAdapter].each do |adapter|
       describe adapter, "#truncate_table" do
+        it "responds" do
+          adapter.new("foo").should respond_to(:truncate_table)
+        end
         it "should truncate the table"
       end
     end
